--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
     "@mui/icons-material": "^5.0.1",
-    "@mui/material": "^5.0.1",
+    "@mui/material": "^5.0.2",
+    "drift-zoom": "^1.5.0",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -24,6 +25,7 @@
     "sass": "^1.39.2"
   },
   "devDependencies": {
+    "@types/drift-zoom": "^1.5.0",
     "@types/react": "17.0.20",
     "@types/tailwindcss": "^2.2.1",
     "autoprefixer": "^10.3.4",
